vbnc/vbnc/tests/Errors/30179.vb
Class A
End Class
Class a
End Class